# vk_friends

./: .gitignore  config.py  main.py  pyproject.toml  vizualize.py
results/: 1728921234_parsed_friends.json  friend_graph.html
schemas/: vk_user.py
services/visualize/: vizualize_graph.py
services/vk_service/: client.py  parser.py
usecases/: parse_friends.py
